--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
-    <title>Ya-Chien Chang</title>
+    <title>Ya-Chien Chang (UCSD)</title>
     <script src='js/jquery-1.11.2.min.js'></script>
     <script src='js/bootstrap.min.js'></script>
     <link href='css/bootstrap.min.css' rel='stylesheet'>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,900,100italic,100,300,300italic,400italic,500italic,900italic,700italic' rel='stylesheet' type='text/css'>
+    <meta name="description" content="I am a first year PhD student in Computer Science and Engineering Department at UC San Diego. My advisor is Professor Sicun Gao, and we are currently working on control and planning problems in robotics"/>
+    
     <style>
         body {
             font-family: 'sans-serif';
@@ -72,19 +74,12 @@
         font-style: italic;
       }
     </style>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-50623594-1', 'auto');
-    ga('send', 'pageview');
-    </script>
+    
   </head>
   <body>
     <div id='header'>
       <div id='header-inner'>
-        <img src='images/me.jpg' class='img-circle img-me'>
+        <img src='images/me.jpg' alt= 'Ya-Chien Chang' class='img-circle img-me'>
         <div class='header-text'>
           <div class='header-text-name'>
             Ya-Chien Chang
