--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Ya-Chien Chang (UCSD)</title>
+    <title>Ya-Chien Chang, UCSD</title>
     <script src='js/jquery-1.11.2.min.js'></script>
     <script src='js/bootstrap.min.js'></script>
     <link href='css/bootstrap.min.css' rel='stylesheet'>
