--- a/NeurIPS2019/index.html
+++ b/NeurIPS2019/index.html
@@ -22,7 +22,7 @@
   <h1><b>Neural Lyapunov Control</b></h1>
   <center>
       <br>
-      <nobr>Ya-Chien Chang<nobr>, <nobr>Nima Roohi</nobr>, and <nobr>Sicun Gao</nobr>
+      <nobr>Ya-Chien Chang</nobr>, <nobr>Nima Roohi</nobr>, and <nobr>Sicun Gao</nobr>
       <br>
       <nobr>University of California, San Diego</nobr>
   </center>
@@ -60,6 +60,10 @@
                 </div>
 
     </div>
+</div>
+
+<div class='row text-center' style='color:#8b8472'>
+    <strong>In NeurIPS 2019</strong> <a href=" papers/Neural_Lyapunov_Control.pdf " target="_blank">[Paper]</a> <a href=" " target="_blank">[Appendix]</a> <a href="https://github.com/YaChienChang/Neural-Lyapunov-Control" target="_blank">[Code]</a>
 </div>
 
 <div class="container sec">
