--- a/NeurIPS2019/index.html
+++ b/NeurIPS2019/index.html
@@ -32,7 +32,7 @@
 <div class="sechighlight">
 <div class="container sec">
   <h2>Abstract</h2>
-  We propose new methods for learning control policies and neural network Lyapunov functions for nonlinear control problems, with provable guarantee of stability. The framework consists of a learner that attempts to find the control and Lyapunov functions, and a falsifier that finds counterexamples to quickly guide the learner towards solutions. The procedure terminates when no counterexample is found by the falsifier, in which case the controlled nonlinear system is provably stable. The approach significantly simplifies the process of Lyapunov control design, provides end-to-end correctness guarantee, and can obtain much larger regions of attraction than existing methods such as LQR and SOS/SDP. We show experiments on how the new methods obtain high-quality solutions for challenging robot control problems such as humanoid robot balancing and wheeled vehicle path-following.
+  We propose new methods for learning control policies and neural network Lyapunov functions for nonlinear control problems, with provable guarantee of stability. The framework consists of a learner that attempts to find the control and Lyapunov functions, and a falsifier that finds counterexamples to quickly guide the learner towards solutions. The procedure terminates when no counterexample is found by the falsifier, in which case the controlled nonlinear system is provably stable. The approach significantly simplifies the process of Lyapunov control design, provides end-to-end correctness guarantee, and can obtain much larger regions of attraction than existing methods such as LQR and SOS/SDP. We show experiments on how the new methods obtain high-quality solutions for challenging control problems.
 
 </div>
 </div>
@@ -63,7 +63,7 @@
 </div>
 
 <div class='row text-center' style='color:#8b8472'>
-    <strong>Published in NeurIPS 2019</strong> <a href="paper/Neural_Lyapunov_Control.pdf " target="_blank">[Paper]</a> <a href="paper/Neural_Lyapunov_Control_Appendices.pdf" target="_blank">[Appendices]</a> <a href="https://github.com/YaChienChang/Neural-Lyapunov-Control" target="_blank">[Code]</a>
+    <strong>Published in NeurIPS 2019</strong> <a href="paper/Neural_Lyapunov_Control.pdf " target="_blank">[Paper]</a> <a href="paper/Neural_Lyapunov_Control_Appendix.pdf" target="_blank">[Appendices]</a> <a href="https://github.com/YaChienChang/Neural-Lyapunov-Control" target="_blank">[Code]</a>
 </div>
 
 <div class="container sec">
