--- a/NeurIPS2019/index.html
+++ b/NeurIPS2019/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class='col-xs-6'>
-            <h3>Humanoid balance: </h3>
+            <h3>3-Link Planar Robot Balancing: </h3>
             
             <div class='row'>
                 <div class='col-xs-6'>
