--- a/NeurIPS2019/index.html
+++ b/NeurIPS2019/index.html
@@ -43,7 +43,7 @@
         <h2>Overall algorithm: </h2>
         </div>
         <div class='col-xs-6'>
-            <h2>Humanoid balance with learned controller: </h2>
+            <h2>3-Link planar robot balancing with learned controller: </h2>
             </div>
     </div>
 
