--- a/NeurIPS2019/index.html
+++ b/NeurIPS2019/index.html
@@ -63,7 +63,7 @@
 </div>
 
 <div class='row text-center' style='color:#8b8472'>
-    <strong>Published in NeurIPS 2019</strong> <a href="paper/Neural_Lyapunov_Control.pdf " target="_blank">[Paper]</a> <a href="paper/Neural_Lyapunov_Control_Appendix.pdf" target="_blank">[Appendices]</a> <a href="https://github.com/YaChienChang/Neural-Lyapunov-Control" target="_blank">[Code]</a>
+    <strong>Published in NeurIPS 2019</strong> <a href="paper/Neural_Lyapunov_Control.pdf " target="_blank">[Paper]</a> <a href="paper/Neural_Lyapunov_Control_Appendix.pdf" target="_blank">[Poster]</a> <a href="paper/poster.pdf" target="_blank">[Appendices]</a> <a href="https://github.com/YaChienChang/Neural-Lyapunov-Control" target="_blank">[Code]</a>
 </div>
 
 <div class="container sec">
