--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src='js/jquery-1.11.2.min.js'></script>
     <script src='js/bootstrap.min.js'></script>
     <link href='css/bootstrap.min.css' rel='stylesheet'>
+    <link rel="icon" href="images/UCSDLogo.png">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,900,100italic,100,300,300italic,400italic,500italic,900italic,700italic' rel='stylesheet' type='text/css'>
     <meta name="description" content="I am a PhD student in Computer Science and Engineering Department at UC San Diego. My advisor is Professor Sicun Gao, and we are currently working on control and planning problems in robotics"/>
     
