--- a/ICRA2021/index.html
+++ b/ICRA2021/index.html
@@ -52,7 +52,7 @@
 
 <div class="container sec">
 <h2>Results: </h2>
-<center><h3><b>Inverted Pendulum</b></h3></center>
+<center><h3><b>Inverted pendulum</b></h3></center>
 
 <div class='row'>
     <div class='col-xs-4'>
