--- a/ICRA2021/index.html
+++ b/ICRA2021/index.html
@@ -209,11 +209,13 @@
   <div class="row">
       <h2>Bibtex</h2>
 <pre style="font-size:11px; background-color: #E5E3DD">
-@inproceedings{
-    title={Stabilizing Neural Control Using Self-Learned Almost Lyapunov Critics},
-    author={Ya-Chien Chang and Sicun Gao},
-    booktitle={ICRA},
-    year={2021}
+@inproceedings{chang2021stabilizing,
+  title={Stabilizing neural control using self-learned almost Lyapunov critics},
+  author={Chang, Ya-Chien and Gao, Sicun},
+  booktitle={2021 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={1803--1809},
+  year={2021},
+  organization={IEEE}
 }
 </pre>
     </div>
