--- a/NeurIPS2019/index.html
+++ b/NeurIPS2019/index.html
@@ -133,11 +133,16 @@
   <div class="row">
       <h2>Bibtex</h2>
 <pre style="font-size:11px; background-color: #E5E3DD">
-@inproceedings{
-    title={Neural Lyapunov Control},
-    author={Ya-Chien Chang, Nima Roohi, and Sicun Gao},
-    booktitle={NeurIPS},
-    year={2019}
+@inproceedings{NEURIPS2019_2647c1db,
+ author = {Chang, Ya-Chien and Roohi, Nima and Gao, Sicun},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Neural Lyapunov Control},
+ url = {https://proceedings.neurips.cc/paper/2019/file/2647c1dba23bc0e0f9cdf75339e120d2-Paper.pdf},
+ volume = {32},
+ year = {2019}
 }
 </pre>
     </div>
