--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         margin-top: 30px;
       }
       .paper-image {
-        width: 160px;
+        width: 220px;
       }
       .paper-title {
         font-weight: bold;
@@ -150,6 +150,28 @@
               <div>
                 <a href="https://yachienchang.github.io/ICRA2021/paper/ICRA21_1516_FI.pdf">[Paper]</a>
                 <a href="https://yachienchang.github.io/ICRA2021/index.html">[Project Page]</a>
+<!--                <a href="https://github.com/YaChienChang/">[Code]</a>-->
+              </div>
+            </div>
+          </div>
+          
+          <div class='row vspace-top'>
+            <div class='col-xs-3 text-center'>
+              <img class='paper-image' src='images/2023.png'>
+            </div>
+            <div class='col-xs-9'>
+              <div class='paper-title'>
+                Learning Stabilization Control from Observations by Learning Lyapunov-like Proxy Models
+              </div>
+              <div class='paper-authors'>
+                  Milan Ganai, Chiaki Hirayama, <b>Ya-Chien Chang</b>, and Sicun Gao
+              </div>
+              <div>
+                ICRA (International Conference on Robotics and Automation) 2023
+              </div>
+              <div>
+                <a href="https://milanganai.github.io/ICRA2023/paper/ICRA_2023_Learning_Stabilization_Control_from_Observations_by_Learning_Lyapunov-like_Proxy_Models.pdf">[Paper]</a>
+                <a href="https://milanganai.github.io/ICRA2023/">[Project Page]</a>
 <!--                <a href="https://github.com/YaChienChang/">[Code]</a>-->
               </div>
             </div>
