--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ya-Chien Chang, UCSD</title>
     <script src='js/jquery-1.11.2.min.js'></script>
     <script src='js/bootstrap.min.js'></script>
@@ -21,9 +22,7 @@
         #header {
             width: 100%;
             height: 360px;
-            background-color: #C0BBAB
-            /* background-color: #b30000; */
-            /* background-color: #CCC; */
+            background-color: #C0BBAB;
         }
       #header-inner {
         position: absolute;
