--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     
     <style>
         body {
-            font-family: 'sans-serif';
-            font-size: 20px;
-            background-color: #FFFCF4;
-            color: #4F6071;
+          font-family: 'sans-serif';
+          font-size: 18px;
+          background-color: #FFFCF4;
+          color: #4F6071;
+          line-height: 1.4;
         }
         .color1 {
             background-color: #CCC;
@@ -24,21 +25,34 @@
             height: 360px;
             background-color: #C0BBAB;
         }
-      #header-inner {
-        position: absolute;
-        width: 70%;
-        left: 30%;
-        top: 150px;
-      }
-      .img-me {
-        border: 0;
-        float: left;
-        height: 200px;
-      }
-      .header-text {
-        margin-top: 60px;
-        margin-left: 220px;
-      }
+        #header-inner {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+        }
+
+        .img-me {
+          border: 0;
+          height: auto;
+          max-width: 18%;
+        }
+
+        .header-text {
+          margin-top: 20px;
+          text-align: center;
+        }
+
+        #contact-info {
+          position: absolute;
+          left: 80%;
+          width: 20%;
+          top: 360px;
+          height: 100px;
+          background-color: #EEE;
+        }
+        
       .header-text-name {
         font-weight: bold;
         font-size: 40px;
@@ -50,14 +64,6 @@
       .header-text-desc {
         font-size: 20px;
       }
-      #contact-info {
-        position: absolute;
-        left: 80%;
-        width: 20%;
-        top: 360px;
-        height: 100px;
-        background-color: #EEE;
-      }
       .vspace {
         margin-bottom: 20px;
       }
@@ -65,7 +71,7 @@
         margin-top: 30px;
       }
       .paper-image {
-        width: 220px;
+        width: 100%;
       }
       .paper-title {
         font-weight: bold;
