--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         .img-me {
           border: 0;
-          height: auto;
-          max-width: 18%;
+          float: left;
+          height: 200px;
         }
 
         .header-text {
@@ -45,12 +45,10 @@
         }
 
         #contact-info {
-          position: absolute;
-          left: 80%;
-          width: 20%;
-          top: 360px;
-          height: 100px;
+          margin-top: 20px;
           background-color: #EEE;
+          padding: 10px;
+          text-align: center;
         }
         
       .header-text-name {
