--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             Ya-Chien Chang
           </div>
           <div class='header-text-email'>
-            yac021 at ucsd dot eng dot edu
+            yac021 at ucsd dot edu
           </div>
         </div>
       </div>
