--- a/ICRA2021/index.html
+++ b/ICRA2021/index.html
@@ -47,7 +47,8 @@
 </div>
 
 <div class='row text-center' style='color:#8b8472'>
-    <strong>Published in ICRA 2021</strong> <a href="paper/ICRA21_1516_FI.pdf " target="_blank">[Paper]</a> <a href=" " target="_blank">[Code coming soon!]</a>
+    <strong>Published in ICRA 2021</strong> <a href="paper/ICRA21_1516_FI.pdf " target="_blank">[Paper]</a>
+<!--    <a href=" " target="_blank">[Code coming soon!]</a>-->
 </div>
 
 <div class="container sec">
