--- a/index.html
+++ b/index.html
@@ -179,7 +179,27 @@
               </div>
             </div>
           </div>
-          
+
+          <div class='row vspace-top'>
+            <div class='col-xs-3 text-center'>
+              <img class='paper-image' src='images/2024.png'>
+            </div>
+            <div class='col-xs-9'>
+              <div class='paper-title'>
+                Extremum-Seeking Action Selection for Accelerating Policy Optimization
+              </div>
+              <div class='paper-authors'>
+                  <b>Ya-Chien Chang</b>, and Sicun Gao
+              </div>
+              <div>
+                ICRA (International Conference on Robotics and Automation) 2024
+              </div>
+              <div>
+                <a href="https://yachienchang.github.io/ICRA2024/paper/ICRA_24_ESA.pdf">[Paper]</a>
+                <a href="https://yachienchang.github.io/ICRA2024/index.html">[Project Page]</a>
+              </div>
+            </div>
+          </div>
       </div>
     </div>
   </body>
