--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='css/bootstrap.min.css' rel='stylesheet'>
     <link rel="icon" href="images/UCSDLogo.png">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,900,100italic,100,300,300italic,400italic,500italic,900italic,700italic' rel='stylesheet' type='text/css'>
-    <meta name="description" content="I am a PhD student in Computer Science and Engineering Department at UC San Diego. My advisor is Professor Sicun Gao, and we are currently working on control and planning problems in robotics"/>
+    <meta name="description" content="I am a Ph.D. candidate in the Department of Computer Science and Engineering at UC San Diego. My research lies at the intersection of reinforcement learning, control theory, and stability analysis, with a focus on developing practical algorithms for safe and reliable decision-making in complex systems. I am actively seeking a full-time research position. "/>
     
     <style>
         body {
@@ -100,14 +100,14 @@
         <div class='row'>
           <h1>About Me</h1>
           <div class='vspace'>
-            I am a PhD student in Computer Science and Engineering Department at UC San Diego. My advisor is Professor <a href="http://scungao.github.io/" target="_blank">Sicun Gao</a>, and we are currently working on control and planning problems in robotics. I received my master degree in Applied Mathematics from National Tsing-Hua University. My master thesis focus on analyzing the stability of dynamical systems in mathematical biology.
+            I am a Ph.D. candidate in the Department of Computer Science and Engineering at UC San Diego, advised by Professor <a href="http://scungao.github.io/" target="_blank">Sicun Gao</a>. My research lies at the intersection of reinforcement learning, control theory, and stability analysis, with a focus on developing practical algorithms for safe and reliable decision-making in complex systems. I hold a master’s degree in Applied Mathematics from National Tsing-Hua University, where I built a strong foundation in optimization and mathematical modeling. I am actively seeking a full-time research position to apply my expertise in developing effective and robust AI algorithms.
           </div>
         
         </div>
         <div class='row'>
         <h1>Research Interests</h1>
         <div class='vspace'>
-        Robotics, Nonliear Dynamical Systems and Control.
+        Reinforcement Learning, Safety Certificates in Robotics, Optimization, Control Theory.
         </div>
 
         </div>
